@@ -1,4 +1,6 @@
 from __future__ import print_function, division
+import platform
+WIN32= platform.system() == 'Windows'
 import pytest
 import numpy
 from scipy import interpolate, integrate
@@ -1342,6 +1344,7 @@ def test_setup_progIsTrack():
     return None  
 
 def test_bovy14_useTM_poterror():
+    if WIN32: return None # skip on appveyor, because no TM
     # Test that setting up the stream model with useTM, but a different 
     # actionAngleTorus potential raises a IOError
     #Imports
@@ -1366,6 +1369,7 @@ def test_bovy14_useTM_poterror():
     return None
 
 def test_bovy14_useTM():
+    if WIN32: return None # skip on appveyor, because no TM
     #Test that setting up with useTM is very close to the Bovy (2014) setup
     #Imports
     from scipy import interpolate
@@ -1401,6 +1405,7 @@ def test_bovy14_useTM():
     return None  
 
 def test_bovy14_useTM_useTMHessian():
+    if WIN32: return None # skip on appveyor, because no TM
     #Test that setting up with useTM is very close to the Bovy (2014) setup
     #Imports
     from scipy import interpolate
@@ -1439,6 +1444,7 @@ def test_bovy14_useTM_useTMHessian():
     return None  
 
 def test_bovy14_useTM_approxConstTrackFreq():
+    if WIN32: return None # skip on appveyor, because no TM
     #Test that setting up with useTM is very close to the Bovy (2014) setup
     #Imports
     from scipy import interpolate
